BScrollView: Take both minimum dimensions of scrollbars into account.

Fixes #5678.